--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="mgm-logo.png" href="/MGMwebsite/public/favicon.ico" />
+    <link rel="icon" type="mgm-logo.ico" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@MGMCET KAMOTHE</title>
   </head>
