--- a/index.html
+++ b/index.html
@@ -8,19 +8,18 @@
   </head>
   <body>
     <div id="root"></div>
-    <div class="loader" id="loader">
+    <!-- <div class="loader" id="loader">
       <h1 class="text-6xl">LEARN</h1>
       <h1>GROW</h1>
       <h1>EXCEL</h1>
-    </div>
-    <script>
+    </div> -->
+    <!-- <script>
       document.addEventListener("DOMContentLoaded", () => {
         setTimeout(() => {
           document.getElementById("loader").style.display = "none";
         }, 4200); // Ensure it's longer than the last animation delay (3s + some buffer)
       });
-  
-    </script>
+    </script> -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
